# avellaneda-stoikov-market-maker

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  run_paper.py  run_recorder.py  run_testnet_demo.py
deploy/: DEPLOY.md  ecosystem.config.js
docs/superpowers/plans/: 2026-07-06-mm-bot-milestone1-feed.md  2026-07-06-mm-bot-milestone2-sim-baseline.md  2026-07-06-mm-bot-milestone3-avellaneda-stoikov.md  2026-07-06-mm-bot-milestone5-testnet-deploy.md  2026-07-09-mm-bot-milestone4p5-risk-funding.md  2026-07-23-mm-bot-milestone8-kdbq.md  (+1 more)
mm_bot/: config.py  risk.py
mm_bot/exec_testnet/: orders.py  rpc.py
mm_bot/feed/: book.py  client.py  messages.py  recorder.py
mm_bot/paper/: adverse.py  engine.py  portfolio.py  replay.py  sim.py
mm_bot/research/: edge.py  qsession.py  tickdb.py  walkforward.py
mm_bot/store/: db.py
mm_bot/strategy/: avellaneda_stoikov.py  base.py  estimators.py  fixed_spread.py
q/: edge.q  ofi.q  report.q  verify.q
scripts/: load_tick.py  run_full_replay.py  run_kdb_parity.py  run_kdb_report.py  run_kdb_verify.py  run_ofi_overlay_sweep.py  run_ofi_study.py  run_param_sweep.py
tests/: conftest.py  test_adverse.py  test_avellaneda_stoikov.py  test_book.py  test_client.py  test_config.py  test_edge_decomposition.py  test_engine.py  test_engine_hooks.py  test_estimators.py  test_exec_orders.py  test_exec_rpc.py  test_fixed_spread.py  test_messages.py  test_ofi.py  test_portfolio.py  test_qedge.py  test_recorder.py  test_replay.py  test_risk.py  test_sim.py  test_store.py  test_tickdb.py  test_walkforward.py
(+1 files in other folders)
